добавлена страница с выводом справочника норм ПФ

--- a/src/main/resources/templates/funding_fap.html
+++ b/src/main/resources/templates/funding_fap.html
@@ -14,6 +14,6 @@
 <p><a th:href="@{/funding_calc}">Расчет месячного финансового обеспечения ФАП</a></p>
 <p><a th:href="@{/api/2023/sp_fin_fap}">Выгрузить справочник финансового обеспечения ФАП за 2023г</a></p>
 <p><a th:href="@{/funding_fap}">Редактировать справочник финансового обеспечения ФАП</a></p>
-<p><a th:href="@{/funding_fap}">Редактировать справочник нормативов подушевого финансирования</a></p>
+<p><a th:href="@{/funding_norma}">Редактировать справочник нормативов подушевого финансирования</a></p>
 </body>
 </html>
