+ предзаполнение форм для редактирования

--- a/src/main/resources/templates/funding_norma_page.html
+++ b/src/main/resources/templates/funding_norma_page.html
@@ -27,6 +27,7 @@
     <td th:utext="${fundingNormaInfo.norma}">..</td>
   </tr>
 </table>
-<!--<a href="addFundingNorma">Добавить</a>-->
+
+<!--<a href="addPeriodFundingNorma">Добавить период</a>-->
 </body>
 </html>
