--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -6,6 +6,8 @@
     <a th:href="@{/index}">Начало</a>
     | &nbsp;
     <a th:href="@{/funding_fap}">Финансовое обеспечение ФАП</a>
+    | &nbsp;
+    <a th:href="@{/funding_norma}">Нормативы подушевого финансирования</a>
 </div>
 </body>
 </html>
