--- a/src/main/resources/templates/edit_funding_norma.html
+++ b/src/main/resources/templates/edit_funding_norma.html
@@ -25,6 +25,7 @@
   <input type="text" th:field="*{norma}" />
   <br/>
   <input type="submit" value="Сохранить" />
+  <input type="button" value="Отмена" onClick='location.href="/funding_norma"'>
 </form>
 </body>
 </html>
