+ автозаполнение справочника СНПФ на следующий месяц по ЛПУ

--- a/src/main/resources/templates/funding_norma_page.html
+++ b/src/main/resources/templates/funding_norma_page.html
@@ -28,6 +28,6 @@
   </tr>
 </table>
 
-<!--<a href="addPeriodFundingNorma">Добавить период</a>-->
+<a href="/add_period_funding_norma">Добавить период</a>
 </body>
 </html>
