Реализовано предупреждение о попытке автоматического заполнения непустых полей

--- a/src/main/resources/templates/fill_next_month.html
+++ b/src/main/resources/templates/fill_next_month.html
@@ -9,12 +9,11 @@
 <body>
 <div th:insert="~{menu :: copy}">...</div>
 <h1>Перенос данных из предыдущего месяца</h1>
+<p>Эта операция скопирует данные справочника финансового обеспечения ФАП для заданного месяца с пердыдущего.</p>
+<p>Для заданного месяца будут заполнены поля "Годовая сумма", "Коэффициент", "Сумма по Астрамед", "Сумма по Капитал".</p>
+<p>Будьте внимательны, чтобы не потерять данные</p>
 
-<form th:action="@{/fill_next_month}" th:object="${monthForm}" method="POST">
-
-    <p>Эта операция скопирует данные справочника финансового обеспечения ФАП для заданного месяца с пердыдущего.</p>
-    <p>Для заданного месяца будут заполнены поля "Годовая сумма", "Коэффициент", "Сумма по Астрамед", "Сумма по Капитал".</p>
-    <p>Будьте внимательны, чтобы не потерять данные</p>
+<form th:action="@{/fill_next_month_warning}" th:object="${monthForm}" method="POST">
     Заполняемый месяц
     <select th:field="*{month}">
         <option th:each="monthname : ${monthForm.monthnames}"
