--- a/src/main/resources/templates/funding_fap.html
+++ b/src/main/resources/templates/funding_fap.html
@@ -14,5 +14,26 @@
 <p><a th:href="@{/funding_calc}">Расчет месячного финансового обеспечения ФАП</a></p>
 <p><a th:href="@{/api/2023/sp_fin_fap}">Выгрузить справочник финансового обеспечения ФАП за 2023г</a></p>
 <p><a th:href="@{/funding_fap}">Редактировать справочник финансового обеспечения ФАП</a></p>
+
+
+<table>
+  <tr>
+    <th>OID</th>
+    <th>ЛПУ</th>
+    <th>ФАП</th>
+    <th th:utext=" 'За ' + ${year} + ' год'"></th>
+    <th th:utext=" 'За ' + (${year} + 1) + ' год'"></th>
+
+  </tr>
+  <tr th:each="lpu:${lpuList}">
+    <td th:utext="${lpu.moLpu}">..</td>
+    <td th:utext="${lpu.nameS}">..</td>
+    <td th:utext="${lpu.fapCount}">..</td>
+    <td><a th:href="@{funding_fap/{lpu}/{year}(lpu=${lpu.moLpu}, year=${year})}">Редактировать</a></td>
+    <td><a th:href="@{funding_fap/{lpu}/{year}(lpu=${lpu.moLpu}, year=${year}+1)}">Редактировать</a></td>
+  </tr>
+</table>
+
+
 </body>
 </html>
