Добавлена возможность редактирования ФАП

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -4,7 +4,11 @@
 <body>
 <div th:fragment="copy">
     <a th:href="@{/index}">Начало</a>
-    | &nbsp;
+    |
+    <a th:href="@{/lpu}">ЛПУ</a>
+    |
+    <a th:href="@{/fap}">ФАП</a>
+    |
     <a th:href="@{/funding_fap}">Финансовое обеспечение ФАП</a>
     | &nbsp;
     <a th:href="@{/funding_norma}">Нормативы подушевого финансирования</a>
