--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -96,3 +96,21 @@ span.strong {
 	margin-bottom: 20px;
 	border-bottom: 1px solid #eee;
 }
+
+
+/* Стили для форм*/
+select {
+    width: 500px;
+    padding: 5px 10px;
+    margin: 3px 0;
+}
+input{
+    width: 200px;
+    padding: 5px 10px;
+    margin: 3px 0;
+}
+input[type=text]{
+    width: 600px;
+    padding: 5px 10px;
+    margin: 3px 0;
+}
