--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,3 +114,56 @@ input[type=text]{
     padding: 5px 10px;
     margin: 3px 0;
 }
+
+
+.input-file {
+	position: relative;
+	display: inline-block;
+	height: 60px;
+}
+.input-file-text {
+	padding: 0 10px;
+	line-height: 40px;
+	text-align: left;
+	height: 40px;
+	display: block;
+	float: left;
+	box-sizing: border-box;
+	width: 200px;
+	border: 1px solid Gray;
+}
+.input-file-btn {
+    font-family: Arial, sans-serif;
+    position: relative;
+	display: inline-block;
+	cursor: pointer;
+	outline: none;
+	text-decoration: none;
+	font-size: 13px;
+	vertical-align: middle;
+	text-align: center;
+    background-color: Gainsboro;
+    border: 1px solid Gray;
+	line-height: 22px;
+	height: 40px;
+	padding: 10px 20px;
+	box-sizing: border-box;
+	margin: 0;
+	transition: background-color 0.2s;
+}
+.input-file input[type=file] {
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
+	display: block;
+	width: 0;
+	height: 0;
+}
+.input-file-submit {
+    position: relative;
+    box-sizing: border-box;
+    background-color: Gainsboro;
+    border: 1px solid Gray;
+	height: 40px;
+	width: 200px;
+}
