--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,7 +11,7 @@
     |
     <a th:href="@{/funding_fap}">Финансовое обеспечение ФАП</a>
     | &nbsp;
-    <a th:href="@{/funding_norma}">Нормативы подушевого финансирования</a>
+    <a th:href="@{/funding_norma}">Нормативы подушевого финансирования АПП</a>
     |
     <a th:href="@{/fys}">Cправочник медицинских услуг</a>
 </div>
