+ загрузка норм ПФ СМП за текущий месяц из excel

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -13,6 +13,8 @@
     | &nbsp;
     <a th:href="@{/funding_norma}">Нормативы подушевого финансирования АПП</a>
     |
+    <a th:href="@{/funding_norma_smp}">Нормативы подушевого финансирования СМП</a>
+    |
     <a th:href="@{/fys}">Cправочник медицинских услуг</a>
 </div>
 </body>
