при выгрузке справочника норм ПФ СМП берется вся таблица

--- a/src/main/resources/templates/funding_norma_smp.html
+++ b/src/main/resources/templates/funding_norma_smp.html
@@ -36,7 +36,7 @@ $('.input-file input[type=file]').on('change', function(){
 });
 </script>
 </div>
-<p><a href="/api/pd_tarif/2023">Скачать справочник нормативов по подушевому финансированию скорой медицинской помощи</a></p>
+<p><a href="/api/pd_tarif">Скачать справочник нормативов по подушевому финансированию скорой медицинской помощи</a></p>
 
 <table>
   <tr>
