--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,9 +11,9 @@
     |
     <a th:href="@{/funding_fap}">Финансовое обеспечение ФАП</a>
     | &nbsp;
-    <a th:href="@{/funding_norma}">Нормативы подушевого финансирования АПП</a>
+    <a th:href="@{/funding_norma}">Нормативы ПФ АПП</a>
     |
-    <a th:href="@{/funding_norma_smp}">Нормативы подушевого финансирования СМП</a>
+    <a th:href="@{/funding_norma_smp}">Нормативы ПФ СМП</a>
     |
     <a th:href="@{/fys}">Cправочник медицинских услуг</a>
 </div>
