--- a/src/main/resources/templates/funding_norma_page.html
+++ b/src/main/resources/templates/funding_norma_page.html
@@ -12,25 +12,47 @@
 
 <p><a href="/add_period_funding_norma">Добавить период</a></p>
 <p><a href="/get_norm_pd">Скачать справочник нормативов по подушевому финансированию амбулаторно-поликлинической помощи</a></p>
-<table>
-  <tr>
-    <th></th>
-    <th>ЛПУ</th>
-    <th>Дата начала</th>
-    <th>Численность прикрепленных по Астрамед</th>
-    <th>Численность прикрепленных по Капитал</th>
-    <th>Норматив подушевого</th>
-  </tr>
-  <tr th:each="fundingNormaInfo:${fundingNormaInfos}">
-    <td><a th:href=@{edit_funding_norma/{id}(id=${fundingNormaInfo.id})}>Редактировать</a></td>
-    <td th:utext="${fundingNormaInfo.mNameF}">..</td>
-    <td th:utext="${fundingNormaInfo.FormatedFundingDate}">..</td>
-    <td th:utext="${fundingNormaInfo.quantityInAstr}">..</td>
-    <td th:utext="${fundingNormaInfo.quantityInKap}">..</td>
-    <td th:utext="${fundingNormaInfo.norma}">..</td>
-  </tr>
-</table>
 
+<div  class="scroll-table">
+  <table>
+    <col style="width:10%">
+    <col style="width:50%">
+    <col style="width:10%">
+    <col style="width:10%">
+    <col style="width:10%">
+    <col style="width:10%">
+    <thead>
+      <tr>
+        <th></th>
+        <th>ЛПУ</th>
+        <th>Дата начала</th>
+        <th>Численность прикрепленных по Астрамед</th>
+        <th>Численность прикрепленных по Капитал</th>
+        <th>Норматив подушевого</th>
+      </tr>
+    </thead>
+  </table>
+  <div class="scroll-table-body">
+    <table>
+      <col style="width:10%">
+      <col style="width:50%">
+      <col style="width:10%">
+      <col style="width:10%">
+      <col style="width:10%">
+      <col style="width:10%">
+      <tbody>
+        <tr th:each="fundingNormaInfo:${fundingNormaInfos}">
+          <td><a th:href=@{edit_funding_norma/{id}(id=${fundingNormaInfo.id})}>Редактировать</a></td>
+          <td th:utext="${fundingNormaInfo.mNameF}">..</td>
+          <td th:utext="${fundingNormaInfo.FormatedFundingDate}">..</td>
+          <td th:utext="${fundingNormaInfo.quantityInAstr}">..</td>
+          <td th:utext="${fundingNormaInfo.quantityInKap}">..</td>
+          <td th:utext="${fundingNormaInfo.norma}">..</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 </body>
 </html>
