Обновлена структура для справочника FYS. Испр. опечатки

--- a/src/main/resources/templates/add_period_funding_norma.html
+++ b/src/main/resources/templates/add_period_funding_norma.html
@@ -9,7 +9,7 @@
 <body>
 <div th:insert="~{menu :: copy}">...</div>
 <h1>Добавить период</h1>
-<p>(Добавление записей за новый период в справочник нормативов подушевого финансирования)</p>
+<p>(Добавление записей за новый период в справочник нормативов подушевого финансирования АПП)</p>
 <p>Укажите период действия для новых записей</p>
 <form th:action="@{/add_period_funding_norma}" th:object="${monthForm}" method="POST">
 
