--- a/src/main/resources/templates/fill_next_month.html
+++ b/src/main/resources/templates/fill_next_month.html
@@ -9,7 +9,7 @@
 <body>
 <div th:insert="~{menu :: copy}">...</div>
 <h1>Перенос данных из предыдущего месяца</h1>
-<p>Эта операция скопирует данные справочника финансового обеспечения ФАП для заданного месяца с пердыдущего.</p>
+<p>Эта операция скопирует данные справочника финансового обеспечения ФАП для заданного месяца с предыдущего.</p>
 <p>Для заданного месяца будут заполнены поля "Годовая сумма", "Коэффициент", "Сумма по Астрамед", "Сумма по Капитал".</p>
 <p>Будьте внимательны, чтобы не потерять данные</p>
 
