--- a/src/main/resources/templates/funding_norma_smp.html
+++ b/src/main/resources/templates/funding_norma_smp.html
@@ -83,7 +83,27 @@ $('.input-file input[type=file]').on('change', function(){
   </div>
 </div>
 
+<div>
+  <p>Загрузка cправочника ПФ СМП из справочника в формате xml:</p>
+  <form method="post" th:action="@{/upload_funding_norma_smp_xml}" enctype="multipart/form-data">
 
+    <label class="input-file">
+      <span class="input-file-text" type="text"></span>
+      <input type="file" name="file" accept=".xml">
+      <span class="input-file-btn">Выберите файл</span>
+    </label>
+
+    <input class="input-file-submit" type="submit" value="Загрузить" />
+
+  </form>
+  <!--  <script src="https://snipp.ru/cdn/jquery/2.1.1/jquery.min.js"></script>-->
+  <script>
+$('.input-file input[type=file]').on('change', function(){
+	let file = this.files[0];
+	$(this).closest('.input-file').find('.input-file-text').html(file.name);
+});
+</script>
+</div>
 
 </body>
 </html>
