Добавлена кастомная страница логина, и конф-я security

--- a/src/main/resources/templates/fys.html
+++ b/src/main/resources/templates/fys.html
@@ -10,7 +10,7 @@
 <div th:insert="~{menu :: copy}">...</div>
 <h1>Cправочник медицинских услуг</h1>
 
-<div  th:if="${message != null}" role="alert">
+<div  th:if="${message != null}" role="alert" class="alert-message">
   [[${message}]]
 </div>
 
