--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,5 +13,7 @@
 </p>
 
 </body>
-
+<footer><form th:action="@{/logout}" method="post">
+    <input type="submit" value="выйти" />
+</form></footer>
 </html>
