добавлена админка и функция загрузки v002

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -16,6 +16,8 @@
     <a th:href="@{/funding_norma_smp}">Нормативы ПФ СМП</a>
     |
     <a th:href="@{/fys}">Cправочник медицинских услуг</a>
+    |
+    <a th:href="@{/adm}">Администрирование</a>
 </div>
 </body>
 </html>
