--- a/src/main/resources/templates/edit_license_stac.html
+++ b/src/main/resources/templates/edit_license_stac.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Справочник лицензий (лицензии стационара)</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
-$END$
+<div th:insert="~{menu :: copy}">...</div>
+<h1>Редактирование лицензии стационара</h1>
+<input type="button" value="Вернуться к лицензиям" th:onClick="'location.href = \'' + @{/license/stac/{mcod}(mcod=${lpu.mkod})} + '\''">
+<h2 th:utext="${lpu.mNameS}"></h2>
+<form th:action="@{/license/stac/edit_license_stac/{id}(id=${id})}" th:object="${editLicenseStacForm}" method="POST">
+    <p>Код ЛПУ:</p>
+    <input type="text" th:field="*{mcod}" />
+    <br/>
+    <p>Тип стационара:</p>
+    <select th:field="*{stacType}">
+        <option th:each="stacTypeName : *{stacTypeNames}"
+                th:value="${stacTypeName.key}"
+                th:utext="${stacTypeName.value}">
+        </option>
+    </select>
+    <br/>
+    <p>Тип профиля:</p>
+    <select th:field="*{profil}">
+        <option th:each="profilName : *{profilNames}"
+                th:value="${profilName.key}"
+                th:utext="${profilName.value}">
+        </option>
+    </select>
+    <br/>
+    <p>Возраст:</p>
+    <select th:field="*{age}">
+        <option th:each="ageName : *{ageNames}"
+                th:value="${ageName.key}"
+                th:utext="${ageName.value}">
+        </option>
+    </select>
+    <br/>
+    <p>Вид оплаты:</p>
+    <select th:field="*{payType}">
+        <option th:each="payTypeName : *{payTypeNames}"
+                th:value="${payTypeName.key}"
+                th:utext="${payTypeName.value}">
+        </option>
+    </select>
+    <br/>
+    <p>Дата начала:</p>
+    <input type="date" th:field="*{dateBeg}" />
+    <br/>
+
+    <p>Дата закрытия:</p>
+    <input type="date" th:field="*{dateEnd}" />
+    <br/>
+    <input type="submit" value="Сохранить" />
+    <input type="button" value="Отмена"  th:onClick="'location.href = \'' + @{/license/stac/{mcod}(mcod=${lpu.mkod})} + '\''">
+</form>
 </body>
 </html>
